# Dope_Dictionary

./: .gitignore  README.md  gemini_api_call.py  pyproject.toml  requirements.txt
HashTableService/: hashmap.ser  pom.xml
HashTableService copy/src/main/resources/: application.properties
HashTableService copy/src/test/java/com/example/hashtableservice/: HashTableServiceApplicationTests.java
HashTableService/src/main/java/com/example/hashtableservice/: HashTableServiceApplication.java
HashTableService/src/main/java/com/example/hashtableservice/controller/: DictionaryController.java
HashTableService/src/main/java/com/example/hashtableservice/service/: DictionaryService.java
PROJECTS copy/project_230/: db.sqlite3
PROJECTS copy/project_230/dictionary/: urls.py  views.py
PROJECTS copy/project_230/project_230/: settings.py  wsgi.py
django_project/: requirements.txt
django_project/project_230/: manage.py
django_project/project_230/dictionary/: urls.py  views.py
django_project/project_230/dictionary/static/: styles.css
django_project/project_230/dictionary/templates/: home.html
django_project/project_230/project_230/: asgi.py  settings.py  urls.py
py_code/: prompt.py  requirements.txt  styles_db.json
python_LLM/: Proompts  prompt.py  pyproject.toml
